@@ -26,3 +26,5 @@ John Estabrook <jestabro@ncsa.uiuc.edu>
 Andrew Gallatin <gallatin@gmail.com>
   * threading fix and non Linux performance improvements
 
+Stephen Hemminger <shemminger@linux-foundation.org>
+  * Linux scheduler selection and theading improvements
